# SHIGAI

./: Cargo.toml  README.md
SHIGAI/: Cargo.toml
shigai_project/: Cargo.toml
shigai_project/src/: main.rs
src/: main.rs  verificar_log.rs
