[package]
name = "shigai"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evtx = "0.8.1"
rayon = "1.8.0"
serde = "1.0.188"
serde-xml-rs = "0.6.0"
winapi = { version = "0.3.9", features = ["processthreadsapi"] }
